Fix layout when keyboard is visible

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -31,8 +31,6 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
     width: 100%;
     overflow: hidden;
 }
